fixing tests 5